--- a/View/contact.html
+++ b/View/contact.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="contact">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li>
 												<a href="#">Dropdown</a>
 												<ul>
@@ -55,7 +55,7 @@
 											</li>
 											<li><a href="portfolio.html">Portfolio</a></li>
 											<li><a href="generic.html">Generic</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											<li class="active"><a href="contact.html">Contact</a></li>
 										</ul>
 									</nav>
 
@@ -71,35 +71,36 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="content" class="12u">
+										<div id="contact" class="12u">
+											<header>
+												<h2>Contact</h2>
+											</header>
 
-											<div id="slider">
-												<div class="viewer">
-													<div class="reel">
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide01.jpg" alt="">
+											<section class="12u">
+												<form method="post" action="#">
+													<div class="row 50%">
+														<div class="6u 12u(mobile)">
+															<input name="name" placeholder="Name" type="text" class="text" />
 														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide02.jpg" alt="" />
-														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide03.jpg" alt="" />
+														<div class="6u 12u(mobile)">
+															<input name="email" placeholder="Email" type="text" class="text" />
 														</div>
 													</div>
-												</div>
-												<div class="indicator">
-													<ul>
-														<li class="active">1</li>
-														<li>2</li>
-														<li>3</li>
-													</ul>
-												</div>
-												<div class="caption-line"></div>
-											</div>
-											<div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div>
+													<div class="row 50%">
+														<div class="12u">
+															<textarea name="message" placeholder="Message"></textarea>
+														</div>
+													</div>
+													<div class="row">
+														<div class="12u">
+															<ul class="actions">
+																<li><a href="#" class="button form-button-submit">Send Message</a></li>
+															</ul>
+														</div>
+													</div>
+												</form>
+											</section>
+
 										</div>
 
 								</div>
