--- a/View/generic.html
+++ b/View/generic.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="generic">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li>
 												<a href="#">Dropdown</a>
 												<ul>
@@ -54,7 +54,7 @@
 												</ul>
 											</li>
 											<li><a href="portfolio.html">Portfolio</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											<li class="active"><a href="generic.html">Generic</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</nav>
@@ -72,34 +72,11 @@
 
 									<!-- Content -->
 										<div id="content" class="12u">
-
-											<div id="slider">
-												<div class="viewer">
-													<div class="reel">
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide01.jpg" alt="">
-														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide02.jpg" alt="" />
-														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide03.jpg" alt="" />
-														</div>
-													</div>
-												</div>
-												<div class="indicator">
-													<ul>
-														<li class="active">1</li>
-														<li>2</li>
-														<li>3</li>
-													</ul>
-												</div>
-												<div class="caption-line"></div>
-											</div>
-											<div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div>
+											<header>
+												<h2>Lorem Ipsum Dolor</h2>
+											</header>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet nisl. Quisque sapien lacus, vulputate aliquet urna vel, dapibus pellentesque turpis. In eu orci at dolor dictum viverra sed ut quam. Donec vel pharetra sem, vel facilisis mauris.</p>
 										</div>
 
 								</div>
