--- a/View/portfolio.html
+++ b/View/portfolio.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="portfolio">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li>
 												<a href="#">Dropdown</a>
 												<ul>
@@ -53,7 +53,7 @@
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
 											</li>
-											<li><a href="portfolio.html">Portfolio</a></li>
+											<li class="active"><a href="portfolio.html">Portfolio</a></li>
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
@@ -71,35 +71,22 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="content" class="12u">
-
-											<div id="slider">
-												<div class="viewer">
-													<div class="reel">
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide01.jpg" alt="">
-														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide02.jpg" alt="" />
-														</div>
-														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
-															<img src="images/slide03.jpg" alt="" />
-														</div>
-													</div>
+										<div id="portfolio" class="12u">
+											<header>
+												<h2>Portfolio</h2>
+											</header>
+											<div class="gallery">
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio01.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio01.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio02.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio02.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio03.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio03.jpg" alt=""></a></article></div>
 												</div>
-												<div class="indicator">
-													<ul>
-														<li class="active">1</li>
-														<li>2</li>
-														<li>3</li>
-													</ul>
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio04.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio04.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio05.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio05.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio06.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio06.jpg" alt=""></a></article></div>
 												</div>
-												<div class="caption-line"></div>
 											</div>
-											<div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div>
 										</div>
 
 								</div>
