--- a/View/index.html
+++ b/View/index.html
@@ -27,7 +27,7 @@
 
 								<!-- Logo -->
 									<div id="logo">
-										<h1>Folio <span>by Pixelarity</span></h1>
+										<h1>Vi<span>Visual</span></h1>
 									</div>
 
 								<!-- Nav -->
@@ -77,15 +77,15 @@
 												<div class="viewer">
 													<div class="reel">
 														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
+															
 															<img src="images/slide01.jpg" alt="">
 														</div>
 														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
+															
 															<img src="images/slide02.jpg" alt="" />
 														</div>
 														<div class="slide">
-															<div class="caption"><strong>Aenean justo nulla</strong> at gravida elit In hac habitasse platea dictumst gravida commodo volutpat</div>
+															
 															<img src="images/slide03.jpg" alt="" />
 														</div>
 													</div>
@@ -111,7 +111,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<div id="footer">
+							<!--div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -124,7 +124,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
+								<span>&copy; CopyRight Reserved</span>
 							</div>
 
 					</div>
