--- a/View/index.html
+++ b/View/index.html
@@ -77,7 +77,6 @@
 												<div class="viewer">
 													<div class="reel">
 														<div class="slide">
-															
 															<img src="images/slide01.jpg" alt="">
 														</div>
 														<div class="slide">
@@ -97,7 +96,7 @@
 														<li>3</li>
 													</ul>
 												</div>
-												<div class="caption-line"></div>
+												<!--div class="caption-line"></div-->
 											</div>
 											<div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div>
 										</div>
