--- a/View/index.html
+++ b/View/index.html
@@ -87,6 +87,10 @@
 															
 															<img src="images/slide03.jpg" alt="" />
 														</div>
+														<div class="slide">
+															
+															<img src="images/slide04.jpg" alt="" />
+														</div>
 													</div>
 												</div>
 												<div class="indicator">
@@ -94,6 +98,7 @@
 														<li class="active">1</li>
 														<li>2</li>
 														<li>3</li>
+														<li>4</li>
 													</ul>
 												</div>
 												<!--div class="caption-line"></div-->
