--- a/View/index.html
+++ b/View/index.html
@@ -34,8 +34,8 @@
 									<nav id="nav">
 										<ul>
 											<li class="active"><a href="index.html">Home</a></li>
-											<li>
-												<a href="#">Dropdown</a>
+											<!--li>
+												<a href="#">Company Profile</a>
 												<ul>
 													<li><a href="#">Lorem ipsum dolor</a></li>
 													<li><a href="#">Magna phasellus</a></li>
@@ -52,9 +52,10 @@
 													</li>
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
-											</li>
-											<li><a href="portfolio.html">Portfolio</a></li>
-											<li><a href="generic.html">Generic</a></li>
+											</li-->
+											<li><a href="production.html">Production</a></li>
+											<li><a href="portfolio.html">Ongoing</a></li>
+											<li><a href="generic.html">Team</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</nav>
@@ -84,9 +85,9 @@
 															<img src="images/slide02.jpg" alt="" />
 														</div>
 														<div class="slide">
-															
 															<img src="images/slide03.jpg" alt="" />
 														</div>
+
 													</div>
 												</div>
 												<div class="indicator">
@@ -98,7 +99,7 @@
 												</div>
 												<!--div class="caption-line"></div-->
 											</div>
-											<div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div>
+											<!--div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div-->
 										</div>
 
 								</div>
