--- a/View/index.html
+++ b/View/index.html
@@ -132,7 +132,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; CopyRight Reserved</span>
+								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
 							</div>
 
 					</div>
