add html files and edit nav bar

--- a/View/Production.html
+++ b/View/Production.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="portfolio">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -23,7 +23,7 @@
 					<div id="header-wrapper">
 
 						<!-- Header -->
-							<div id="header" class="container">
+							<div id="header" class="container">									
 
 								<!-- Logo -->
 									<div id="logo">
@@ -73,42 +73,22 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="content" class="12u">
-
-											<div id="slider">
-												<div class="viewer">
-													<div class="reel">
-														<div class="slide">
-															<img src="images/slide01.jpg" alt="">
-														</div>
-														<div class="slide">
-															
-															<img src="images/slide02.jpg" alt="" />
-														</div>
-														<div class="slide">
-															<img src="images/slide03.jpg" alt="" />
-														</div>
-<<<<<<< HEAD
-
-=======
-														<div class="slide">
-															
-															<img src="images/slide04.jpg" alt="" />
-														</div>
->>>>>>> origin/master
-													</div>
+										<div id="portfolio" class="12u">
+											<header>
+												<h2>Portfolio</h2>
+											</header>
+											<div class="gallery">
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio01.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio01.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio02.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio02.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio03.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio03.jpg" alt=""></a></article></div>
 												</div>
-												<div class="indicator">
-													<ul>
-														<li class="active">1</li>
-														<li>2</li>
-														<li>3</li>
-														<li>4</li>
-													</ul>
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio04.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio04.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio05.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio05.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio06.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio06.jpg" alt=""></a></article></div>
 												</div>
-												<!--div class="caption-line"></div-->
 											</div>
-											<!--div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div-->
 										</div>
 
 								</div>
@@ -120,7 +100,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<!--div id="footer">
+							<div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -133,7 +113,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
+								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
 							</div>
 
 					</div>
