--- a/View/companyprofile.html
+++ b/View/companyprofile.html
@@ -27,15 +27,15 @@
 
 								<!-- Logo -->
 									<div id="logo">
-										<h1>Folio <span>by Pixelarity</span></h1>
+										<h1>ViVisual</h1>
 									</div>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li>
-												<a href="#">Dropdown</a>
+											<li class="active"><a href="index.html">Home</a></li>
+											<!--li>
+												<a href="#">Company Profile</a>
 												<ul>
 													<li><a href="#">Lorem ipsum dolor</a></li>
 													<li><a href="#">Magna phasellus</a></li>
@@ -52,10 +52,12 @@
 													</li>
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
-											</li>
-											<li><a href="portfolio.html">Portfolio</a></li>
-											<li class="active"><a href="generic.html">Generic</a></li>
-											<li><a href="contact.html">Contact</a></li>
+											</li-->
+											<li><a href="companyprofile.html">Company Profile</a></li>
+											<li><a href="Production.html">Production</a></li>
+											<li><a href="ongoing.html">Ongoing</a></li>
+											<li><a href="team.html">Team</a></li>
+											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
 
