--- a/View/team.html
+++ b/View/team.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="homepage">
+	<body class="generic">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -74,41 +74,11 @@
 
 									<!-- Content -->
 										<div id="content" class="12u">
-
-											<div id="slider">
-												<div class="viewer">
-													<div class="reel">
-														<div class="slide">
-															<img src="images/slide01.jpg" alt="">
-														</div>
-														<div class="slide">
-															
-															<img src="images/slide02.jpg" alt="" />
-														</div>
-														<div class="slide">
-															<img src="images/slide03.jpg" alt="" />
-														</div>
-<<<<<<< HEAD
-
-=======
-														<div class="slide">
-															
-															<img src="images/slide04.jpg" alt="" />
-														</div>
->>>>>>> origin/master
-													</div>
-												</div>
-												<div class="indicator">
-													<ul>
-														<li class="active">1</li>
-														<li>2</li>
-														<li>3</li>
-														<li>4</li>
-													</ul>
-												</div>
-												<!--div class="caption-line"></div-->
-											</div>
-											<!--div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div-->
+											<header>
+												<h2>Lorem Ipsum Dolor</h2>
+											</header>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet nisl. Quisque sapien lacus, vulputate aliquet urna vel, dapibus pellentesque turpis. In eu orci at dolor dictum viverra sed ut quam. Donec vel pharetra sem, vel facilisis mauris.</p>
 										</div>
 
 								</div>
@@ -120,7 +90,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<!--div id="footer">
+							<div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -133,7 +103,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
+								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
 							</div>
 
 					</div>
