change Team Member

--- a/View/team.html
+++ b/View/team.html
@@ -75,7 +75,7 @@
 									<!-- Content -->
 										<div id="content" class="12u">
 											<header>
-												<h2>Lorem Ipsum Dolor</h2>
+												<h2>Team Member</h2>
 											</header>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet nisl. Quisque sapien lacus, vulputate aliquet urna vel, dapibus pellentesque turpis. In eu orci at dolor dictum viverra sed ut quam. Donec vel pharetra sem, vel facilisis mauris.</p>
@@ -103,7 +103,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
+								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
 							</div>
 
 					</div>
