--- a/View/index.html
+++ b/View/index.html
@@ -88,14 +88,13 @@
 														<div class="slide">
 															<img src="images/slide03.jpg" alt="" />
 														</div>
-<<<<<<< HEAD
 
-=======
+
 														<div class="slide">
 															
 															<img src="images/slide04.jpg" alt="" />
 														</div>
->>>>>>> origin/master
+
 													</div>
 												</div>
 												<div class="indicator">
@@ -133,7 +132,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
 							</div>
 
 					</div>
