--- a/View/ongoing.html
+++ b/View/ongoing.html
@@ -100,7 +100,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<div id="footer">
+							<!--div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -109,11 +109,11 @@
 									<li><a href="#" class="fa fa-linkedin"><span>Linkedin</span></a></li>
 									<li><a href="#" class="fa fa-envelope"><span>Email</span></a></li>
 								</ul>
-							</div>
+							</div-->
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
 							</div>
 
 					</div>
