--- a/View/team.html
+++ b/View/team.html
@@ -103,7 +103,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span>&copy; CopyRight Vivisual 2015.All Rights Reserved.</span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
 							</div>
 
 					</div>
