add css for image

--- a/View/team.html
+++ b/View/team.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -77,8 +78,7 @@
 											<header>
 												<h2>Team Member</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet nisl. Quisque sapien lacus, vulputate aliquet urna vel, dapibus pellentesque turpis. In eu orci at dolor dictum viverra sed ut quam. Donec vel pharetra sem, vel facilisis mauris.</p>
+											<div id="Jin" <a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
 										</div>
 
 								</div>
@@ -90,7 +90,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<div id="footer">
+							<!--div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
