--- a/View/team.html
+++ b/View/team.html
@@ -56,7 +56,7 @@
 											</li-->
 											<li><a href="companyprofile.html">Company Profile</a></li>
 											<li><a href="Production.html">Production</a></li>
-											<li><a href="ongoing.html">Ongoing</a></li>
+											<li><a href="ongoing.html">On-going</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
