add companyProfile, production, team

--- a/View/Production.html
+++ b/View/Production.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="portfolio">
+	<body class="generic">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -23,7 +23,7 @@
 					<div id="header-wrapper">
 
 						<!-- Header -->
-							<div id="header" class="container">									
+							<div id="header" class="container">
 
 								<!-- Logo -->
 									<div id="logo">
@@ -73,22 +73,18 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="portfolio" class="12u">
+										<div id="content" class="12u">
 											<header>
-												<h2>Portfolio</h2>
+												<h2>Production</h2>
 											</header>
-											<div class="gallery">
-												<div class="row 25%">
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio01.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio01.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio02.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio02.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio03.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio03.jpg" alt=""></a></article></div>
-												</div>
-												<div class="row 25%">
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio04.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio04.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio05.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio05.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio06.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio06.jpg" alt=""></a></article></div>
-												</div>
-											</div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.007.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.008.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.009.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.010.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.011.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.012.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.013.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.014.jpg" alt=""></a></div>
 										</div>
 
 								</div>
