--- a/View/team.html
+++ b/View/team.html
@@ -75,10 +75,15 @@
 									<!-- Content -->
 										<div id="content" class="12u">
 											<header>
-												<h2>Lorem Ipsum Dolor</h2>
+												<h2>Team</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet amet, consectetur adipiscing elit. Donec eu aliquet mauris, a imperdiet nisl. Quisque sapien lacus, vulputate aliquet urna vel, dapibus pellentesque turpis. In eu orci at dolor dictum viverra sed ut quam. Donec vel pharetra sem, vel facilisis mauris.</p>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.018.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.019.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.020.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
 										</div>
 
 								</div>
