--- a/View/ongoing.html
+++ b/View/ongoing.html
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="active"><a href="index.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
@@ -55,7 +55,7 @@
 											</li-->
 											<li><a href="companyprofile.html">Company Profile</a></li>
 											<li><a href="Production.html">Production</a></li>
-											<li><a href="ongoing.html">Ongoing</a></li>
+											<li class="active"><a href="ongoing.html">Ongoing</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
