--- a/View/team.html
+++ b/View/team.html
@@ -56,13 +56,9 @@
 											</li-->
 											<li><a href="companyprofile.html">Company Profile</a></li>
 											<li><a href="Production.html">Production</a></li>
-<<<<<<< HEAD
+
 											<li><a href="ongoing.html">Ongoing</a></li>
 											<li class="active"><a href="team.html">Team</a></li>
-=======
-											<li><a href="ongoing.html">On-going</a></li>
-											<li><a href="team.html">Team</a></li>
->>>>>>> origin/master
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
 									</nav>
@@ -81,7 +77,7 @@
 									<!-- Content -->
 										<div id="content" class="12u">
 											<header>
-<<<<<<< HEAD
+
 												<h2>Team</h2>
 											</header>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
@@ -91,11 +87,10 @@
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
-=======
+
 												<h2>Team Member</h2>
 											</header>
-											<div id="Jin" <a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""></a></div>
->>>>>>> origin/master
+											<div id="Jin" <a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""><
 										</div>
 
 								</div>
