--- a/View/Production.html
+++ b/View/Production.html
@@ -55,7 +55,7 @@
 											</li-->
 											<li><a href="companyprofile.html">Company Profile</a></li>
 											<li class="active"><a href="Production.html">Production</a></li>
-											<li><a href="ongoing.html">Ongoing</a></li>
+											<li><a href="ongoing.html">On-going</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
