--- a/View/team.html
+++ b/View/team.html
@@ -56,8 +56,7 @@
 											</li-->
 											<li><a href="companyprofile.html">Company Profile</a></li>
 											<li><a href="Production.html">Production</a></li>
-
-											<li><a href="ongoing.html">Ongoing</a></li>
+											<li><a href="ongoing.html">On-going</a></li>
 											<li class="active"><a href="team.html">Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 										</ul>
@@ -77,10 +76,6 @@
 									<!-- Content -->
 										<div id="content" class="12u">
 											<header>
-<<<<<<< HEAD
-
-=======
->>>>>>> origin/master
 												<h2>Team</h2>
 											</header>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
@@ -90,13 +85,6 @@
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
-
-<<<<<<< HEAD
-												<h2>Team Member</h2>
-											</header>
-											<div id="Jin" <a href="#" class="image image-full"><img src="images/pic01.jpg" alt=""><
-=======
->>>>>>> origin/master
 										</div>
 
 								</div>
