add logo onclick

--- a/View/Production.html
+++ b/View/Production.html
@@ -27,7 +27,7 @@
 
 								<!-- Logo -->
 									<div id="logo">
-										<h1>ViVisual</h1>
+										<h1 onclick="myFunction()">ViVisual</h1>
 									</div>
 
 								<!-- Nav -->
@@ -117,6 +117,12 @@
 			</div>
 
 		<!-- Scripts -->
+			<script>
+			function myFunction()
+			{
+ 	  		 	window.location = './index.html';
+			}
+			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.slidertron.min.js"></script>
