--- a/View/team.html
+++ b/View/team.html
@@ -28,9 +28,8 @@
 
 								<!-- Logo -->
 									<div id="logo">
-										<h1>ViVisual</h1>
+										<h1 onclick="myFunction()">ViVisual</h1>
 									</div>
-
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
@@ -123,6 +122,12 @@
 			</div>
 
 		<!-- Scripts -->
+			<script>
+			function myFunction()
+			{
+ 	  		 	window.location = './index.html';
+			}
+			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.slidertron.min.js"></script>
