add chinese files

--- a/View/index.html
+++ b/View/index.html
@@ -58,6 +58,7 @@
 											<li><a href="ongoing.html">On-going</a></li>
 											<li><a href="team.html">Team</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
+											<li><a href="index-chn.html">中文</a></li>
 										</ul>
 									</nav>
 
