--- a/View/index-chn.html
+++ b/View/index-chn.html
@@ -11,11 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/custom.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="generic">
+	<body class="homepage">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -30,10 +29,11 @@
 									<div id="logo">
 										<h1 onclick="myFunction()">ViVisual</h1>
 									</div>
+
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li class="active"><a href="index-chn.html">Home</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
@@ -53,12 +53,12 @@
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
 											</li-->
-											<li><a href="companyprofile.html">Company Profile</a></li>
-											<li><a href="Production.html">Production</a></li>
+											<li><a href="companyprofile.html">公司简介</a></li>
+											<li><a href="Production.html">作品介绍</a></li>
 											<li><a href="ongoing.html">On-going</a></li>
-											<li class="active"><a href="team.html">Team</a></li>
+											<li><a href="team.html">队伍</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
-											<li><a href="index-chn.html">中文</a></li>
+											<li><a href="index.html">English</a></li>
 										</ul>
 									</nav>
 
@@ -75,16 +75,40 @@
 
 									<!-- Content -->
 										<div id="content" class="12u">
-											<header>
-												<h2>Team</h2>
-											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.018.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.019.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.020.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
+
+											<div id="slider">
+												<div class="viewer">
+													<div class="reel">
+														<div class="slide">
+															<img src="images/slide01.jpg" alt="">
+														</div>
+														<div class="slide">
+															
+															<img src="images/slide02.jpg" alt="" />
+														</div>
+														<div class="slide">
+															<img src="images/slide03.jpg" alt="" />
+														</div>
+
+
+														<div class="slide">
+															
+															<img src="images/slide04.jpg" alt="" />
+														</div>
+
+													</div>
+												</div>
+												<div class="indicator">
+													<ul>
+														<li class="active">1</li>
+														<li>2</li>
+														<li>3</li>
+														<li>4</li>
+													</ul>
+												</div>
+												<!--div class="caption-line"></div-->
+											</div>
+											<!--div class="actions"><a href="#" class="button button-big">Magna gravida commodo</a></div-->
 										</div>
 
 								</div>
