--- a/View/portfolio-chn.html
+++ b/View/portfolio-chn.html
@@ -11,11 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/custom.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
-	<body class="generic">
+	<body class="portfolio">
 
 		<!-- Page Wrapper -->
 			<div id="wrapper">
@@ -28,14 +27,15 @@
 
 								<!-- Logo -->
 									<div id="logo">
-										<h1 onclick="myFunction()">ViVisual</h1>
+										<h1>Folio <span>by Pixelarity</span></h1>
 									</div>
+
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<!--li>
-												<a href="#">Company Profile</a>
+											<li>
+												<a href="#">Dropdown</a>
 												<ul>
 													<li><a href="#">Lorem ipsum dolor</a></li>
 													<li><a href="#">Magna phasellus</a></li>
@@ -52,13 +52,10 @@
 													</li>
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
-											</li-->
-											<li><a href="companyprofile.html">Company Profile</a></li>
-											<li><a href="Production.html">Production</a></li>
-											<li><a href="ongoing.html">On-going</a></li>
-											<li class="active"><a href="team.html">Team</a></li>
-											<li><a href="contact.html">Contact Us</a></li>
-											<li><a href="index-chn.html">中文</a></li>
+											</li>
+											<li class="active"><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="generic.html">Generic</a></li>
+											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</nav>
 
@@ -74,17 +71,22 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="content" class="12u">
+										<div id="portfolio" class="12u">
 											<header>
-												<h2>Team</h2>
+												<h2>Portfolio</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.018.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.019.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.020.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
+											<div class="gallery">
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio01.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio01.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio02.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio02.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio03.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio03.jpg" alt=""></a></article></div>
+												</div>
+												<div class="row 25%">
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio04.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio04.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio05.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio05.jpg" alt=""></a></article></div>
+													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio06.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio06.jpg" alt=""></a></article></div>
+												</div>
+											</div>
 										</div>
 
 								</div>
@@ -96,7 +98,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<!--div id="footer">
+							<div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -109,7 +111,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
+								<span>&copy; UntitledSite. All rights reserved. Lorem ipsum dolor sit amet nullam.</span>
 							</div>
 
 					</div>
@@ -117,12 +119,6 @@
 			</div>
 
 		<!-- Scripts -->
-			<script>
-			function myFunction()
-			{
- 	  		 	window.location = './index.html';
-			}
-			</script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/jquery.slidertron.min.js"></script>
