add chinese translation

--- a/View/index-chn.html
+++ b/View/index-chn.html
@@ -56,8 +56,8 @@
 											<li><a href="companyprofile.html">公司简介</a></li>
 											<li><a href="Production.html">作品介绍</a></li>
 											<li><a href="ongoing.html">On-going</a></li>
-											<li><a href="team.html">队伍</a></li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li><a href="team.html">团队</a></li>
+											<li><a href="contact.html">联系方式</a></li>
 											<li><a href="index.html">English</a></li>
 										</ul>
 									</nav>
