--- a/View/index-chn.html
+++ b/View/index-chn.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Vivisual</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li class="active"><a href="index-chn.html">Home</a></li>
+											<li class="active"><a href="index-chn.html">主页</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
@@ -53,11 +53,11 @@
 													<li><a href="#">Veroeros feugiat</a></li>
 												</ul>
 											</li-->
-											<li><a href="companyprofile.html">公司简介</a></li>
-											<li><a href="Production.html">作品介绍</a></li>
-											<li><a href="ongoing.html">On-going</a></li>
-											<li><a href="team.html">团队</a></li>
-											<li><a href="contact.html">联系方式</a></li>
+											<li><a href="companyprofile-chn.html">公司简介</a></li>
+											<li><a href="Production-chn.html">作品介绍</a></li>
+											<li><a href="ongoing-chn.html">On-going</a></li>
+											<li><a href="team-chn.html">团队</a></li>
+											<li><a href="contact-chn.html">联系方式</a></li>
 											<li><a href="index.html">English</a></li>
 										</ul>
 									</nav>
