change to chinese

--- a/View/contact-chn.html
+++ b/View/contact-chn.html
@@ -76,7 +76,7 @@
 									<!-- Content -->
 										<div id="contact" class="12u">
 											<header>
-												<h2>Contact</h2>
+												<h2>联系方式</h2>
 											</header>
 
 											<section class="12u">
@@ -115,7 +115,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<div id="footer">
+							<!--div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -139,7 +139,7 @@
 			<script>
 			function myFunction()
 			{
- 	  		 	window.location = './index.html';
+ 	  		 	window.location = './index-chn.html';
 			}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
