--- a/View/Production-chn.html
+++ b/View/Production-chn.html
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li><a href="index.html">主页</a></li>
+											<li><a href="index-chn.html">主页</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
@@ -76,7 +76,7 @@
 									<!-- Content -->
 										<div id="content" class="12u">
 											<header>
-												<h2>Production</h2>
+												<h2>作品介绍</h2>
 											</header>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.007.jpg" alt=""></a></div>
 											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.008.jpg" alt=""></a></div>
@@ -121,7 +121,7 @@
 			<script>
 			function myFunction()
 			{
- 	  		 	window.location = './index.html';
+ 	  		 	window.location = './index-chn.html';
 			}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
