--- a/View/ongoing-chn.html
+++ b/View/ongoing-chn.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Vivisual/title>
+		<title>Untitled</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li><a href="index－chn.html">主页</a></li>
+											<li><a href="index-chn.html">主页</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
