不会有问题吧
不会有问题吧

--- a/View/Production-chn.html
+++ b/View/Production-chn.html
@@ -78,14 +78,14 @@
 											<header>
 												<h2>作品介绍</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.007.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.008.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.009.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.010.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.011.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.012.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.013.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/works/eng.014.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.007.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.008.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.009.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.010.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.011.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.012.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.013.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/works/chn.014.jpg" alt=""></a></div>
 										</div>
 
 								</div>
