--- a/View/companyprofile-chn.html
+++ b/View/companyprofile-chn.html
@@ -78,12 +78,12 @@
 											<header>
 												<h2>公司简介</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.001.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.002.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.003.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.004.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.005.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/companyProfile/eng.006.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.001.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.002.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.003.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.004.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.005.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/companyProfile/chn.006.jpg" alt=""></a></div>
 										</div>
 
 								</div>
