--- a/View/team-chn.html
+++ b/View/team-chn.html
@@ -78,13 +78,13 @@
 											<header>
 												<h2>团队</h2>
 											</header>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.017.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.018.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.019.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.020.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.021.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.022.jpg" alt=""></a></div>
-											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/team/eng.023.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.017.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.018.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.019.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.020.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.021.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.022.jpg" alt=""></a></div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../chn/team/chn.023.jpg" alt=""></a></div>
 										</div>
 
 								</div>
