change on going
add ongoing pic

--- a/View/contact-chn.html
+++ b/View/contact-chn.html
@@ -55,7 +55,7 @@
 											</li-->
 											<li><a href="companyprofile-chn.html">公司简介</a></li>
 											<li><a href="Production-chn.html">作品介绍</a></li>
-											<li><a href="ongoing-chn.html">On-going</a></li>
+											<li><a href="ongoing-chn.html">进行中</a></li>
 											<li><a href="team-chn.html">团队</a></li>
 											<li class="active"><a href="contact-chn.html">联系方式</a></li>
 											<li><a href="contact.html">English</a></li>
@@ -78,8 +78,15 @@
 											<header>
 												<h2>联系方式</h2>
 											</header>
-
-											<section class="12u">
+											<div>
+											<center> 
+											6001 Butcher Rd. Nanaimo V9T 6C2
+											<center>
+											<center> 
+											+1(604)-715-3210
+											<center>
+										    </div>
+											<!--section class="12u">
 												<form method="post" action="#">
 													<div class="row 50%">
 														<div class="6u 12u(mobile)">
@@ -102,7 +109,7 @@
 														</div>
 													</div>
 												</form>
-											</section>
+											</section-->
 
 										</div>
 
