--- a/View/contact.html
+++ b/View/contact.html
@@ -78,8 +78,15 @@
 											<header>
 												<h2>Contact</h2>
 											</header>
-
-											<section class="12u">
+											<div>
+											<center> 
+											6001 Butcher Rd. Nanaimo V9T 6C2
+											<center>
+											<center> 
+											+1(604)-715-3210
+											<center>
+										    </div>
+											<!--section class="12u">
 												<form method="post" action="#">
 													<div class="row 50%">
 														<div class="6u 12u(mobile)">
@@ -102,7 +109,7 @@
 														</div>
 													</div>
 												</form>
-											</section>
+											</section-->
 
 										</div>
 
