--- a/View/team-chn.html
+++ b/View/team-chn.html
@@ -55,7 +55,7 @@
 											</li-->
 											<li><a href="companyprofile-chn.html">公司简介</a></li>
 											<li><a href="Production-chn.html">作品介绍</a></li>
-											<li><a href="ongoing-chn.html">On-going</a></li>
+											<li><a href="ongoing-chn.html">进行中</a></li>
 											<li class="active"><a href="team-chn.html">团队</a></li>
 											<li><a href="contact-chn.html">联系方式</a></li>
 											<li><a href="team.html">English</a></li>
