--- a/View/ongoing-chn.html
+++ b/View/ongoing-chn.html
@@ -55,7 +55,7 @@
 											</li-->
 											<li><a href="companyprofile-chn.html">公司简介</a></li>
 											<li><a href="Production-chn.html">作品介绍</a></li>
-											<li class="active"><a href="ongoing-chn.html">On-going</a></li>
+											<li class="active"><a href="ongoing-chn.html">进行中</a></li>
 											<li><a href="team-chn.html">团队</a></li>
 											<li><a href="contact-chn.html">联系方式</a></li>
 											<li><a href="ongoing.html">English</a></li>
@@ -74,23 +74,13 @@
 								<div class="row">
 
 									<!-- Content -->
-										<div id="portfolio" class="12u">
+										<div id="content" class="12u">
 											<header>
-												<h2>Portfolio</h2>
+												<h2>进行中</h2>
 											</header>
-											<div class="gallery">
-												<div class="row 25%">
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio01.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio01.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio02.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio02.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio03.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio03.jpg" alt=""></a></article></div>
-												</div>
-												<div class="row 25%">
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio04.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio04.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio05.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio05.jpg" alt=""></a></article></div>
-													<div class="4u 12u(mobile)"><article><a href="images/portfolio/fulls/portfolio06.jpg" class="image image-full image-shadow"><img src="images/portfolio/thumbs/portfolio06.jpg" alt=""></a></article></div>
-												</div>
-											</div>
+											<div class="image-shadow"><a href="#" class="image image-full"><img src="./../eng/Ongoing/eng.001.jpg" alt=""></a></div>
 										</div>
+
 
 								</div>
 							</div>
