copy rights reform

--- a/View/contact.html
+++ b/View/contact.html
@@ -122,7 +122,7 @@
 					<div id="footer-wrapper" class="container">
 
 						<!-- Footer -->
-							<div id="footer">
+							<!--div id="footer">
 								<ul class="contact">
 									<li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
 									<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
@@ -135,7 +135,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015. All Rights Reserved.</font></span>
 							</div>
 
 					</div>
