--- a/View/ongoing-chn.html
+++ b/View/ongoing-chn.html
@@ -104,7 +104,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015. All Rights Reserved.</font></span>
 							</div>
 
 					</div>
@@ -115,7 +115,7 @@
 			<script>
 			function myFunction()
 			{
- 	  		 	window.location = './index.html';
+ 	  		 	window.location = './index-chn.html';
 			}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
