--- a/View/contact-chn.html
+++ b/View/contact-chn.html
@@ -33,7 +33,7 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<ul>
-											<li><a href="index－chn.html">主页</a></li>
+											<li><a href="index-chn.html">主页</a></li>
 											<!--li>
 												<a href="#">Company Profile</a>
 												<ul>
@@ -135,7 +135,7 @@
 
 						<!-- Copyright -->
 							<div id="copyright">
-								<span><font color="white">&copy; CopyRight Vivisual 2015.All Rights Reserved.</font></span>
+								<span><font color="white">&copy; CopyRight Vivisual 2015. All Rights Reserved.</font></span>
 							</div>
 
 					</div>
