--- a/View/index-chn.html
+++ b/View/index-chn.html
@@ -144,7 +144,7 @@
 			<script>
 			function myFunction()
 			{
- 	  		 	window.location = './index.html';
+ 	  		 	window.location = './index-chn.html';
 			}
 			</script>
 			<script src="assets/js/jquery.min.js"></script>
