--- a/View/companyprofile-chn.html
+++ b/View/companyprofile-chn.html
@@ -58,7 +58,7 @@
 											<li><a href="ongoing-chn.html">进行中</a></li>
 											<li><a href="team-chn.html">团队</a></li>
 											<li><a href="contact-chn.html">联系方式</a></li>
-											<li><a href="companyprofile-chn.html">中文</a></li>
+											<li><a href="companyprofile.html">English</a></li>
 										</ul>
 									</nav>
 
